# opencl_tests

./: .gitignore  CMakeLists.txt
cmake/: FindOpenCL.cmake  FindPackageHandleStandardArgs.cmake
src/lib/: CMakeLists.txt
src/lib/subfolder/: lib.cpp  lib.h  lib.hpp  test.hpp
src/main/: main.cpp
